--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@slidev/cli": "^0.33.0",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.22.2"
   }
 }
